--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
     "format:check": "prettier --check ."
   },
   "dependencies": {
-    "@supabase/ssr": "^0.7.0",
+    "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.45.4",
     "clsx": "^2.1.1",
     "lottie-react": "^2.4.1",
     "next": "^15.5.9",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
     "recharts": "^3.2.1",
     "zustand": "^5.0.8"
   },
